<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/date_placeholder"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="193dp" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/time_placeholder"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="246dp" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/weight_placeholder"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="302dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#3a874a"
        android:text="@string/button_add_weight"
        tools:layout_editor_absoluteX="138dp"
        tools:layout_editor_absoluteY="362dp" />
</androidx.constraintlayout.widget.ConstraintLayout>