<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <EditText
        android:id="@+id/edit_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="193dp"
        android:ems="10"
        android:hint="@string/date_placeholder"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/time_placeholder"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/edit_date"
        app:layout_constraintTop_toBottomOf="@+id/edit_date" />

    <EditText
        android:id="@+id/edit_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:hint="@string/weight_placeholder"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/edit_time"
        app:layout_constraintTop_toBottomOf="@+id/edit_time" />

    <Button
        android:id="@+id/button_add_weight2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="#3a874a"
        android:text="@string/button_add_weight"
        app:layout_constraintStart_toStartOf="@+id/edit_weight"
        app:layout_constraintTop_toBottomOf="@+id/edit_weight" />

    <TextView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3a874a"
        android:gravity="center"
        android:padding="16dp"
        android:text="Add/Edit Weight Input"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>